--- a/index.html
+++ b/index.html
@@ -39,11 +39,7 @@
                     nivel de exigencia y calidad de la enseñanza.
                     Este resultado es el reflejo de la misión que tenemos como instituto: lograr que nuestros
                     estudiantes logren sus proyectos de vida. Por ello, agradecemos a nuestros estudiantes y
-                    sus familiares por depositar su confianza en nosotros.
-                    Asimismo en CERTUS ofrecemos la carrera de Administración Bancaria, Contabilidad, Negocios
-                    Internacionales, Administración de Negocios y Gestión del Emprendimiento, y la nueva
-                    carrera de Marketing y Gestión de Ventas. Cabe resaltar que 9 de cada 10 egresados
-                    ya trabajan, según el último informe de empleabilidad de la promoción 2015 II.</p>
+                    sus familiares por depositar su confianza en nosotros.</p>
             </article>
             <article>
 
@@ -69,7 +65,7 @@
     </section>
 
     <footer>
-        <p>Amada Quichua - Todos los derechos &copy; reservados </p>
+        <p>Amada Quichua Merino - Todos los derechos &copy; reservados </p>
     </footer>
 </body>
 
